frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-slotter
  namespace: slotter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-slotter
  template:
    metadata:
      labels:
        app: frontend-slotter
    spec:
      containers:
        - name: frontend-slotter
          image: yungbote18/frontend-slotter:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
