frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-slotter
  namespace: slotter
spec:
  type: ClusterIP
  selector:
    app: frontend-slotter
  ports:
    - name: http
      port: 80
      targetPort: 80
